--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "filehound": "^1.17.0",
     "link": "^0.1.5",
     "marked": "^0.6.2",
+    "node-fetch": "^2.6.0",
     "save": "^2.4.0"
   },
+  "scripts": {
+    "test": "jest --coverage"
+  },
   "bin": {
-    "md-links": "index.js"
+    "md-links": "./index.js"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
