--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "md-links",
+  "name": "gm-md-links",
   "version": "0.1.0",
   "dependencies": {
     "chalk": "^2.4.2",
     "fetch": "^1.1.0",
     "filehound": "^1.17.0",
     "link": "^0.1.5",
-    "marked": "^0.6.3",
+    "marked": "^0.6.2",
     "node-fetch": "^2.6.0",
     "save": "^2.4.0"
   },
   "scripts": {
     "test": "jest --coverage"
   },
-  "main": "./md-links.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gisellem22/SCL009-md-links"
+  },
+  "author": "Giselle Machado",
+  "license": "ISC",
   "bin": {
-    "md-links": "./bin/cli.js"
+    "md-links": "./index.js"
   },
   "devDependencies": {
     "eslint": "^6.0.1",
