--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gm-md-links",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "dependencies": {
     "chalk": "^2.4.2",
     "fetch": "^1.1.0",
@@ -19,10 +19,16 @@
   },
   "author": "Giselle Machado",
   "license": "ISC",
-
   "bin": {
     "md-links": "./index.js"
   },
+  "keywords": [
+    "markdown",
+    "links",
+    "node.js",
+    "javascript",
+    "npm"
+  ],
   "devDependencies": {
     "eslint": "^6.0.1",
     "jest": "^24.8.0"
